@@ -125,14 +125,22 @@ void DropEntityPickups(ItemInfo* item)
 	for (short pickupNumber = item->CarriedItem; pickupNumber != NO_ITEM; pickupNumber = pickup->CarriedItem)
 	{
 		pickup = &g_Level.Items[pickupNumber];
-		pickup->Pose.Position.x = (item->Pose.Position.x & -CLICK(1)) | CLICK(1);
-		pickup->Pose.Position.z = (item->Pose.Position.z & -CLICK(1)) | CLICK(1);
+		pickup->Pose.Position.x = item->Pose.Position.x;
+		pickup->Pose.Position.z = item->Pose.Position.z;
 
-		pickup->Pose.Position.y = GetCollision(pickup->Pose.Position.x, item->Pose.Position.y, pickup->Pose.Position.z, item->RoomNumber).Position.Floor;
+		pickup->Pose.Position.y = GetCollision(item).Position.Floor;
 		auto bounds = GameBoundingBox(pickup);
 		pickup->Pose.Position.y -= bounds.Y2;
 
 		ItemNewRoom(pickupNumber, item->RoomNumber);
+
+		// HACK: pickup is not moved to a right room at this moment, it will only update next game loop.
+		// Therefore, we need to temporarily inject actual room number, so AlignEntityToSurface succeeds.
+
+		pickup->RoomNumber = item->RoomNumber;
+		AlignEntityToSurface(pickup, Vector2(Objects[item->ObjectNumber].radius));
+		pickup->RoomNumber = -1;
+
 		pickup->Flags |= 32;
 	}
 }
