@@ -15,6 +15,7 @@ namespace TEN::Math::Geometry
 	Vector3	 TranslatePoint(const Vector3& point, const EulerAngles& orient, float distance);
 	Vector3i TranslatePoint(const Vector3i& point, const Vector3& direction, float distance);
 	Vector3	 TranslatePoint(const Vector3& point, const Vector3& direction, float distance);
+	Vector3  TranslatePoint(const Vector3& point, const EulerAngles& orient, const Vector3& offset);
 
 	short GetShortestAngle(short fromAngle, short toAngle);
 	short GetSurfaceSteepnessAngle(Vector2 tilt);
