@@ -15,6 +15,8 @@ Version 1.0.6
 * Fix TR4 SKELETON spawn when used with OCB 3
 * Fix TR4 SAS teleporting over the blocks he walks by.
 * Fix enemy projectile effect colours.
+* Fix enemy shadow position.
+* Make enemies drop pickups at their origin point, not bounding box centerpoint.
 * Restore original volumetric explosion effects.
 * Add undead flag to TR4 sphinx to prevent it from becoming bugged after receiving a lot of damage.
 * Add an option to activate Lua or node events from legacy triggers.
